@@ -43,6 +43,8 @@ lava-block-square-island=Square Island
 lava-elevation=LavaBlock Elevation
 
 [technology-name]
+rare-mineral-extraction=Rare Mineral Extraction
+lava-centrifuge=Lava Centrifuge
 lava-block-add-landfill=Island Expansion
 lava-block-nullius-add-landfill=Island Expansion
 calcite-processing-on-lava-block=Calcite Processing
@@ -82,6 +84,7 @@ lava-speed-module-3=Craft speed modules 3 using lava instead of standard materia
 lava-flying-robot-frame=Craft flying robot frames using lava instead of steel plates.
 
 [item-name]
+hot-tungsten-ore=Hot Tungsten Ore
 foundation-platform-nauvis=Foundation Platform (Nauvis)
 slag=Slag
 air-cooler=Air Cooler
@@ -94,12 +97,15 @@ lava-mech-armor=Lava Mech Armor
 [item-description]
 lava-mech-armor=A basic mech armor with minimal protection. Perfect for surviving the harsh lava environment.
 [entity-name]
+lava-centrifuge=Lava Centrifuge
 air-cooler=Air Cooler
 geo-thermal-turbine=Geo Thermal Turbine
 air-compressor=Air Compressor
 industrialised-chemical-plant=Industrialised Chemical Plant
 [fluid-name]
+purified-lava=Purified Lava
 liquid-nitrogen=Liquid Nitrogen
+liquid-tungsten=Liquid Tungsten
 argon=Argon
 air=Air
 compressed-air=Compressed Air
@@ -111,6 +117,12 @@ chlorine=Chlorine
 lava-block-island-management=Island management
 chemistry=Chemistry
 [recipe-name]
+tungsten-plate-from-lava=Tungsten Plate from Lava
+uranium-from-lava=Uranium from Lava
+hot-tungsten-ore-from-lava=Hot Tungsten Ore from Lava
+liquid-tungsten-from-hot-ore=Liquid Tungsten from Hot Ore
+lava-purification=Lava Purification
+concentrated-ore-extraction=Concentrated Ore Extraction
 coal-extraction=Coal Extraction
 wood-extraction=Wood Extraction
 iron-extraction=Iron Extraction
