@@ -1,7 +1,8 @@
 return {
     type = "fluid",
     name = "liquid-tungsten",
-    icon = "__space-age__/graphics/icons/tungsten-ore.png",
+    subgroup = "fluid",
+    icon = "__LavaBlock__/graphics/icons/fluid/tungsten_liquid_scaled_sprite_sheet.png",
     icon_size = 64,
     default_temperature = 3400,
     max_temperature = 4000,
